tests/baselines/reference/getJavaScriptSyntacticDiagnostics6.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics6.ts':
/tests/cases/fourslash/a.js(1,11): error TS8006: 'interface' declarations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    interface I { }
              ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.